# netflix_titles_analysis

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: main.yml
download_upload_dataset/: download_dataset.sh
src/: main.py
src/bash_scripts/: setup_local.sh  upload_dataset_to_s3.sh
src/dataframe_processing/: netflix_titles.py  ratings.py  titles.py  users.py
src/download_upload_dataset/: download_dataset.sh
src/lambdas/fetch_dataset_to_s3/: fetch_dataset_to_s3.py
src/pyspark/: main.py  read_dataset.py
src/pyspark/dataframe_processing/: netflix_titles.py  users.py
src/pyspark/utils/: aws_utils.py  spark_session.py
src/pyspark_files/dataframe_processing/: netflix_titles.py  users.py
src/reccomendations/: prepare_data.py  recommend_titles.py  training_model.py
src/setup_locally/: setup_local.sh
src/utils/: aws_utils.py  environment_utils.py  spark_session.py
terraform_files/: lambdas.tf  main.tf  provider.tf  s3_buckets.tf  variables.tf
tests/: conftest.py  test_read_dataset.py
tests/test_pyspark/: test_main.py  test_read_dataset.py
tests/test_pyspark/test_dataframe_processing/: test_netflix_titles.py  test_ratings.py  test_titles.py  test_users.py
tests/test_pyspark/test_utils/: test_aws_utils.py  test_environment_utils.py  test_spark_session.py
