[tool.poetry]
name = "netflix-titles-analysis"
version = "0.1.0"
description = ""
authors = ["Mihai M <mihaimituca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.117"
pyspark = "^3.5.1"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
